Refactored the code for better readability